Modfis array en arrayList + ajout des tests GTSP